# pycondest

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pycondest/: __init__.py  cond1est.py
tests/: conftest.py  test_cond1est.py
tests/data/: random1.mat  random10.mat  random11.mat  random12.mat  random13.mat  random14.mat  random2.mat  random3.mat  random4.mat  random5.mat  random6.mat  random7.mat  random8.mat  random9.mat
